# NanoMamba-Interspeech2026

./: .gitignore  Dockerfile  LICENSE  LICENSE-MIT  NC_SSM_Vision_Colab.ipynb  NanoMamba_Train.ipynb  README.md  colab_run.sh  measure_efficiency.py  nanomamba.py  nc_bio.py  nc_vibration.py  plot_babble_comparison.py  plot_baseline_comparison.py  plot_final_performance.py  plot_landscape.py  plot_noise_results.py  plot_paper_figure.py  plot_param_efficiency.py  plot_pcen_comparison.py  plot_structural_comparison.py  train_all_models.py  train_colab.py  train_nc_tcn.ipynb  train_nc_vibration.ipynb  train_vibration.py
nano-ssm/: demo_mic.py  demo_mic_baseline.py  demo_mic_ces.py  download_checkpoints.ipynb  pyproject.toml  train_quick.py
nano-ssm/app/: battle.html  battle_server.py  mcu_demo.html  mcu_demo_server.py
nano-ssm/csdk/: CMakeLists.txt  _tmp_audio.raw  build.sh  demo_mic_c.py
nano-ssm/csdk/build_20k/: ncssm_config.h  ncssm_weights_inc.h
nano-ssm/csdk/build_7k/: ncssm_config.h  ncssm_weights.h  ncssm_weights_inc.h
nano-ssm/csdk/include/: ncssm.h  ncssm_weights.h
nano-ssm/csdk/src/: activations.c  features.c  linear.c  ncssm.c  pcen.c  ssm_scan.c  utils.c
nano-ssm/csdk/test/: audio_down.raw  audio_go.raw  audio_no.raw  audio_stop.raw  audio_up.raw  audio_yes.raw  benchmark_mcu.py  compare_stages.py  debug_stages.c  (+5 more)
nano-ssm/fpga/: generate_report_pdf.py  ncssm_core.v  simulate.py
nano-ssm/nano_ssm/: __init__.py
nano-ssm/sales/: License_Term_Sheet.md  NC-SSM_Pitch_Deck.pptx  NC-SSM_Tech_Summary.html  Target_Companies.md  _generate_pitch_deck.js
(+91 files in other folders)
